--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -42,6 +42,9 @@ lazy_static = "1.4"
 governor = "0.6"
 prometheus = "0.13"
 
+# Force compatible zeroize version
+zeroize = "=1.3.0"
+
 [dev-dependencies]
 actix-rt = "2.9"
 actix-test = "0.1"
