--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,35 +15,35 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Use only PostgreSQL features to avoid MySQL dependencies
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], default-features = false }
+# Use only PostgreSQL features to avoid MySQL dependencies that require newer zeroize
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], default-features = false }
 
 redis = { version = "0.24", features = ["tokio-comp"] }
 jsonwebtoken = "9.2"
 
 # Use password-hash instead of bcrypt to avoid zeroize conflicts
-password-hash = "0.5"
-argon2 = "0.5"
+password-hash = "0.4"
+argon2 = "0.4"
 
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
-# Use compatible Solana versions that work with zeroize 1.3.0
-solana-sdk = "1.16"
-solana-client = "1.16"
-solana-account-decoder = "1.16"
+# Use older Solana versions that are compatible with zeroize 1.3.0
+solana-sdk = "1.14"
+solana-client = "1.14"
+solana-account-decoder = "1.14"
 
 # Use compatible anchor version
-anchor-client = "0.28"
+anchor-client = "0.26"
 
 reqwest = { version = "0.11", features = ["json", "stream"] }
-tokio-tungstenite = "0.21"
+tokio-tungstenite = "0.20"
 aes-gcm = "0.10"
 rand = "0.8"
 hex = "0.4"
 dotenv = "0.15"
 config = "0.14"
 log = "0.4"
-env_logger = "0.11"
+env_logger = "0.10"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 anyhow = "1.0"
@@ -57,7 +57,3 @@ prometheus = "0.13"
 [dev-dependencies]
 actix-rt = "2.9"
 actix-test = "0.1"
-
-# Force resolution of conflicting dependencies
-[patch.crates-io]
-zeroize = "=1.3.0"
