--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,44 +15,45 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Use only PostgreSQL features to avoid MySQL dependencies that require newer zeroize
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], default-features = false }
+# Database with PostgreSQL support
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
 
-redis = { version = "0.24", features = ["tokio-comp"] }
+# Authentication and security
 jsonwebtoken = "9.2"
-
-# Use password-hash instead of bcrypt to avoid zeroize conflicts
-password-hash = "0.4"
-argon2 = "0.4"
-
+argon2 = "0.5"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
-# Use older Solana versions that are compatible with zeroize 1.3.0
-solana-sdk = "1.14"
-solana-client = "1.14"
-solana-account-decoder = "1.14"
-
-# Use compatible anchor version
-anchor-client = "0.26"
-
-reqwest = { version = "0.11", features = ["json", "stream"] }
-tokio-tungstenite = "0.20"
+# Encryption for wallet private keys
 aes-gcm = "0.10"
 rand = "0.8"
 hex = "0.4"
+
+# Solana SDK
+solana-sdk = "1.17"
+solana-client = "1.17"
+
+# HTTP client and WebSocket
+reqwest = { version = "0.11", features = ["json", "stream"] }
+tokio-tungstenite = "0.21"
+
+# Configuration and logging
 dotenv = "0.15"
 config = "0.14"
 log = "0.4"
-env_logger = "0.10"
+env_logger = "0.11"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+# Error handling
 anyhow = "1.0"
 thiserror = "1.0"
+
+# Time handling
 chrono = { version = "0.4", features = ["serde"] }
+
+# Utilities
 once_cell = "1.19"
 lazy_static = "1.4"
-governor = "0.6"
-prometheus = "0.13"
 
 [dev-dependencies]
 actix-rt = "2.9"
