--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,7 +15,7 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Database with PostgreSQL support
+# Database with PostgreSQL support (Supabase)
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
 
 # Authentication and security
@@ -54,6 +54,9 @@ chrono = { version = "0.4", features = ["serde"] }
 # Utilities
 once_cell = "1.19"
 lazy_static = "1.4"
+
+# Decimal handling for financial calculations
+rust_decimal = { version = "1.33", features = ["serde"] }
 
 [dev-dependencies]
 actix-rt = "2.9"
