--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,6 +26,7 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 # Encryption for wallet private keys
 aes-gcm = "0.10"
 rand = "0.8"
+rand_core = "0.6"
 hex = "0.4"
 
 # Solana SDK
