--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,15 +23,15 @@ jsonwebtoken = "9.2"
 argon2 = "0.5"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
-# Encryption for wallet private keys
-aes-gcm = "0.10"
+# Encryption for wallet private keys - Updated to compatible version
+aes-gcm = "0.9"
 rand = "0.8"
 rand_core = "0.6"
 hex = "0.4"
 
-# Solana SDK
-solana-sdk = "1.17"
-solana-client = "1.17"
+# Solana SDK - Updated to compatible versions
+solana-sdk = "1.16"
+solana-client = "1.16"
 
 # HTTP client and WebSocket
 reqwest = { version = "0.11", features = ["json", "stream"] }
