--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Database with PostgreSQL support (Supabase) - compatible version
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "decimal"] }
 
 # Authentication and security
 jsonwebtoken = "8.3"
@@ -33,6 +33,7 @@ aes-gcm = "0.9"
 rand = "0.8"
 rand_core = "0.6"
 hex = "0.4"
+sha2 = "0.10"
 
 # Solana SDK - compatible versions
 solana-sdk = "1.16"
@@ -61,8 +62,8 @@ chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.19"
 lazy_static = "1.4"
 
-# Decimal handling for financial calculations
-rust_decimal = { version = "1.33", features = ["serde"] }
+# Decimal handling for financial calculations - with sqlx support
+rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
 
 [dev-dependencies]
 actix-rt = "2.8"
