--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,13 +6,9 @@ authors = ["Tony <tony@cerberuschain.com>", "Dave <dave@cerberuschain.com>"]
 description = "Cerberus Chain: Hydra - Advanced Solana Memecoin Trading Bot Backend"
 
 [dependencies]
-# Web framework with compatible versions
+# Web framework
 actix-web = "4.4"
-actix-web-actors = "4.2"
 actix-cors = "0.6"
-actix-files = "0.6"
-
-# Async runtime - pin to compatible version
 tokio = { version = "1.35", features = ["full"] }
 futures = "0.3"
 
@@ -20,51 +16,36 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Database with PostgreSQL support (Supabase) - compatible version
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "decimal"] }
+# Database with SQLite support (NO NETWORK REQUIRED)
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
 
 # Authentication and security
 jsonwebtoken = "8.3"
 argon2 = "0.4"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
-# Encryption for wallet private keys - compatible version
+# Encryption for wallet private keys
 aes-gcm = "0.9"
 rand = "0.8"
-rand_core = "0.6"
 hex = "0.4"
 sha2 = "0.10"
 
-# Solana SDK - compatible versions
+# Solana SDK (for when you're ready)
 solana-sdk = "1.16"
 solana-client = "1.16"
 
-# HTTP client and WebSocket
-reqwest = { version = "0.11", features = ["json", "stream"] }
-tokio-tungstenite = "0.20"
+# HTTP client
+reqwest = { version = "0.11", features = ["json"] }
 
 # Configuration and logging
 dotenv = "0.15"
-config = "0.13"
 log = "0.4"
 env_logger = "0.10"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-
-# Error handling
 anyhow = "1.0"
-thiserror = "1.0"
-
-# Time handling
 chrono = { version = "0.4", features = ["serde"] }
 
-# Utilities
-once_cell = "1.19"
-lazy_static = "1.4"
-
-# Decimal handling for financial calculations - with sqlx support
-rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
+# Decimal handling
+rust_decimal = { version = "1.33", features = ["serde"] }
 
 [dev-dependencies]
 actix-rt = "2.8"
-actix-test = "0.1"
